[gd_scene load_steps=14 format=3 uid="uid://cwy80g5iu3k2g"]

[ext_resource type="ButtonGroup" uid="uid://ba5217885gilm" path="res://scenes/ui/gameplay/card_system/card/card_button_group.tres" id="1_6idn0"]
[ext_resource type="Script" uid="uid://u2j2lgxrunq7" path="res://scenes/ui/gameplay/card_system/card/card.gd" id="2_ot5eo"]
[ext_resource type="Resource" uid="uid://brwolkrrs6ug2" path="res://custom_resources/card/spawning_card/test/test_card.tres" id="3_a6yv7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a6yv7"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_qhumo"]

[sub_resource type="Gradient" id="Gradient_rp2s4"]
colors = PackedColorArray(0.435294, 0.435294, 0.435294, 1, 0.435192, 0.435192, 0.435192, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wqpsn"]
gradient = SubResource("Gradient_rp2s4")

[sub_resource type="Gradient" id="Gradient_a6yv7"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rp2s4"]
gradient = SubResource("Gradient_a6yv7")
width = 25
height = 25

[sub_resource type="Animation" id="Animation_rp2s4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Image:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_a6yv7"]
resource_name = "selected"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Image:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverTint:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ToggleTint:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_wqpsn"]
resource_name = "unselected"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Image:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverTint:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ToggleTint:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wqpsn"]
_data = {
&"RESET": SubResource("Animation_rp2s4"),
&"selected": SubResource("Animation_a6yv7"),
&"unselected": SubResource("Animation_wqpsn")
}

[node name="Card" type="Button"]
custom_minimum_size = Vector2(243, 338)
offset_right = 243.0
offset_bottom = 338.0
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_a6yv7")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_a6yv7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_a6yv7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_a6yv7")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_a6yv7")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_a6yv7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_a6yv7")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_a6yv7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_a6yv7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_a6yv7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_a6yv7")
toggle_mode = true
button_group = ExtResource("1_6idn0")
script = ExtResource("2_ot5eo")
card_data = ExtResource("3_a6yv7")

[node name="Image" type="TextureRect" parent="."]
custom_minimum_size = Vector2(243, 338)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_qhumo")
expand_mode = 1

[node name="PopUpControl" type="Control" parent="."]
visible = false
z_index = 1
custom_minimum_size = Vector2(332, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_top = -150.0
offset_right = 300.0
grow_horizontal = 0

[node name="ColorRect" type="ColorRect" parent="PopUpControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.336608, 0.336608, 0.336608, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="PopUpControl"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Card Description"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 171

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5

[node name="Title" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 73)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 23
text = "Placeholder name"
autowrap_mode = 3
clip_text = true

[node name="Back" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextBackground" type="TextureRect" parent="Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 73.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_wqpsn")

[node name="RichTextLabel" type="RichTextLabel" parent="Back"]
custom_minimum_size = Vector2(200, 227)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_vertical = 0
bbcode_enabled = true
text = "Description of the Card"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Flip" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_bottom = 33.0
grow_horizontal = 0
toggle_mode = true
button_pressed = true
icon = SubResource("GradientTexture2D_rp2s4")

[node name="HoverTint" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.243137)

[node name="ToggleTint" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 0.717647, 0.160784)

[node name="ShowDesc" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DescImage" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 182.0
offset_top = -205.0
offset_right = 385.0
offset_bottom = 22.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wqpsn")
}
autoplay = "RESET"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_popup_panel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_exited" from="." to="." method="_on_popup_panel_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
[connection signal="pressed" from="Flip" to="." method="_on_flip_pressed"]
[connection signal="timeout" from="ShowDesc" to="." method="_on_show_desc_timeout"]
